# homework_2_7

./: .gitignore  config.ini  main.py  my_select.py  pyproject.toml  seed.py  seeds.py
alembic/: env.py
alembic/versions/: 067bc1d1af80_students.py  17dd7ac3b057_init.py  75b071c93829_students.py  d8a14328f6bd_teachers.py  e8a90f7e767c_grade.py  f54f117b5856_subject.py
database/: db.py  medels.py  models.py
seeds/: grades.py  groups.py  students.py  subjects.py  teachers.py
